Commit de un nuevo elemento en el html y css, osea el blogpost

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     <title>Blog post</title>
 </head>
 <body>
-    <h1>Aqui vamos a hacer un blog post</h1>
-    <p>Parrafo del blogpost, ahuevo pai</p>
+    <div id="container">
+        <div id="post">
+            <h1>Titulo del post</h1>
+            <p>Parrafo del blogpost, ahuevo pai Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia laboriosam numquam tenetur, sunt distinctio ab maxime adipisci similique, eaque pariatur dicta nesciunt omnis harum provident. Enim sed explicabo earum laboriosam.</p>
+        </div>
+    </div>
+    
     <div class="Card">
         <div class="Card_color">
             <p>Hola carta 1</p>
