--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            cabecera
+        </div>
         <div id="post">
             <h1>Titulo del post</h1>
             <p>Parrafo del blogpost, ahuevo pai Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia laboriosam numquam tenetur, sunt distinctio ab maxime adipisci similique, eaque pariatur dicta nesciunt omnis harum provident. Enim sed explicabo earum laboriosam.</p>
