--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            cabecera
+            HyperBlog
+            <span id="tagline">Tu blog de confianza</span>
         </div>
         <div id="post">
             <h1>Titulo del post</h1>
