--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div id="post">
             <h1>Titulo del post</h1>
             <p>Parrafo del blogpost, ahuevo pai Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia laboriosam numquam tenetur, sunt distinctio ab maxime adipisci similique, eaque pariatur dicta nesciunt omnis harum provident. Enim sed explicabo earum laboriosam.</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae nihil ipsa fugiat quasi, doloribus eaque facere ad esse beatae nulla ducimus perspiciatis sunt quidem magnam iusto eveniet vitae veniam voluptates.</p>
         </div>
     </div>
     
