agregue subscripcion y cambie la cabecera a "maestro" y el texto a color azul

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <div id="container">
         <div id="cabecera">
             HyperBlog
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog maestro</span>
         </div>
         <div id="post">
             <h1>Titulo del post</h1>
             <p>Parrafo del blogpost, ahuevo pai Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia laboriosam numquam tenetur, sunt distinctio ab maxime adipisci similique, eaque pariatur dicta nesciunt omnis harum provident. Enim sed explicabo earum laboriosam.</p>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae nihil ipsa fugiat quasi, doloribus eaque facere ad esse beatae nulla ducimus perspiciatis sunt quidem magnam iusto eveniet vitae veniam voluptates.</p>
+            <p>Subscribete y dale like</p>
         </div>
     </div>
     
